# GameOfLife

./: CMakeLists.txt  README.md  gitignore  main.c
src/: LifReader.c  LifReader.h  engine.c  engine.h
